<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonIngresso"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:text="cadastrar ingresso"
        app:layout_constraintEnd_toEndOf="@+id/tilQuantidade"
        app:layout_constraintStart_toStartOf="@+id/tilQuantidade"
        app:layout_constraintTop_toBottomOf="@+id/tilQuantidade" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTipoIngresso"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tedtTipoIngresso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tedt_tipo_ingresso" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tilTipoIngresso"
        app:layout_constraintStart_toStartOf="@+id/tilTipoIngresso"
        app:layout_constraintTop_toBottomOf="@+id/tilTipoIngresso">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tedtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiedt_valor"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilQuantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tilValor"
        app:layout_constraintStart_toStartOf="@+id/tilValor"
        app:layout_constraintTop_toBottomOf="@+id/tilValor">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tedtQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiedt_quantidade"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>