<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNomeLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:maxHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiedtNomeLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tiedt_nome_local" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCapacidadePessoas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tilNomeLocal"
            app:layout_constraintStart_toStartOf="@+id/tilNomeLocal"
            app:layout_constraintTop_toBottomOf="@+id/tilNomeLocal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiedtCapacidadePessoas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tiedt_capacidade_pessoas"
                android:inputType="number"
                android:maxLength="9" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tilCapacidadePessoas"
            app:layout_constraintStart_toStartOf="@+id/tilCapacidadePessoas"
            app:layout_constraintTop_toBottomOf="@+id/tilCapacidadePessoas">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiedtDescricaoLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tiedt_descricao"
                android:maxLength="100" />
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>>

</FrameLayout>